methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:3: error: not found: type Colour
def isFacingTrail(c:Colour):Boolean = {
                    ^