methods.slug.SlugSnail.scala.code
def marque ()  {baisseBrosse();leveBrosse()}
def isFacingTrail(c:Colour):Boolean = {
  if (estFaceMur()){return false}
  else {avance();if (getCouleurSol() == c ) {recule();return true}
                                             recule();return false}
}

def hunt(c:Color) {while(!estSurBiscuit()){
  if (isFacingTrail(c)) {avance();marque()}
  else{droite();if (isFacingTrail()) {avance();marque()}
       else { gauche();gauche();avance();marque}}};prendBiscuit()
 }

 // here comes your isFacingTrail method